# fastmcp

./: .dockerignore  .gitignore  .loq_cache  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  COMPARISON.md  Dockerfile  Dockerfile.plus  FASTMCP_3_MARKETING_SUMMARY.md  LLM.md  Makefile  Meta_Mega_Codex.md  PR_SUMMARY.md  README-PLUS.md  README.md  SMITHERY_README.md  STATUS.md  TOON_INTEGRATION.md  TOON_QUICKSTART.md  justfile  loq.toml  pyproject.toml  requirements-plus.txt  sep-1686-catchup.md  sep-1686-compliance.md  server.py  smithery-plus.yaml  smithery.yaml  test_input_schema_titles.py  test_log.py  test_output_schema_titles.py  test_remove_nulls_middleware.py  validate_plus.py  validate_smithery.py  waha_mcp_plus.py
.claude/commands/: dedupe.md
.github/: pull_request_template.md
.github/workflows/: auto-close-duplicates.yml  auto-close-needs-mre.yml  claude-dedupe-issues.yml  claude-triage-issues.yml  lint.yml  martian-issue-triage.yml  marvin-dedupe-issues.yml  marvin-label-triage.yml  marvin.yml  repoagent-docs.yml  run-static.yml  run-tests.yml  run-upgrade-checks.yml  update-config-schema.yml
agent_hub/: __init__.py  activate.py  orchestrator.py
configs/: global_config.yaml
custody/: __init__.py  custodian_ledger.py
custom_mcp_server/: .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  README.md  activate.py  client.py  config.py  mcp_registry.py  pyproject.toml  requirements.txt  secrets_manager.py  server.py  unified_registry.py
custom_mcp_server/src/activ8_mcp/: __init__.py  cli.py  registry.py  server.py
custom_mcp_server/tests/: __init__.py  test_server.py
docs/: changelog.mdx  docs.json  faq.mdx  updates.mdx
docs/clients/: client.mdx  generate-cli.mdx  notifications.mdx  prompts.mdx  resources.mdx  sampling.mdx  tools.mdx  transports.mdx
docs/css/: python-sdk.css
docs/deployment/: fastmcp-cloud.mdx  http.mdx  running-server.mdx  self-hosted.mdx  server-configuration.mdx  testing.mdx
docs/development/: contributing.mdx  tests.mdx  upgrade-guide.mdx
docs/en/: changelog.mdx  updates.mdx
docs/getting-started/: installation.mdx  quickstart.mdx  welcome.mdx
docs/integrations/: anthropic.mdx  asgi.mdx  auth0.mdx  authkit.mdx  aws-cognito.mdx  azure.mdx  chatgpt.mdx  claude-code.mdx  claude-desktop.mdx  continue.mdx  (+20 more)
examples/: .env.waha.example  WAHA_QUICKSTART.md  WAHA_README.md  cursor_demo.py  demo_waha.py  fastmcp-http.json  fastmcp-multi.json  fastmcp.json  memory.py  mount_example.py  opentelemetry_example.py  remove_nulls_middleware_example.py  requirements-waha.txt  scope_example.py  screenshot.py  serializer.py  state_snapshot_demo.py  test.py  text_me.py  tool_result_echo.py  toon_comparison.py  toon_example.py  verify_toon_support.py  waha_simple.py  waha_whatsapp.py
memory/: __init__.py
plans/: docs-rewrite-map.md  docs-style-guide.md  docs.md
relay/: __init__.py  notion_relay.py  slack_signal.py  teamwork_sink.py
repros/: header_auth_demo.py
say-hello/: package-lock.json  package.json  smithery.yaml
scripts/: auto_close_duplicates.py  codex_repo_validator.py  diagnostics.py  load_secrets_from_notion.py  run_mypy.sh  start_autonomy_loop.py
telemetry/: __init__.py  emit_heartbeat.py
tests/: conftest.py  test_123.py  test_agent_activation.py  test_apps.py  test_apps_prefab.py  test_autonomy_single_cycle.py  test_debug_settings.py  test_examples.py  test_health_endpoint.py  test_heartbeat_writes_ledger.py  test_json_schema_generation.py  test_mcp_config.py  test_show_cli_banner_setting.py  test_unpack_pydantic_args.py
v3-notes/: distributed-task-context-design.md  task-meta-parameter.md
(+851 files in other folders)
