[project]
name = "custom_mcp_server"
version = "0.1.0"
description = "A custom MCP server with various integrations."
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [
  { name = "AI Agent", email = "ai.agent@example.com" },
]
dependencies = [
  "fastmcp",
  "requests",
  "replicate",
  "firecrawl-py",
  "dataforseo-api-python",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true
